// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading Component Should render the loader 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ cyXInH"
  >
    <div
      class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
      data-testid="loader"
      role="progressbar"
      style="width: 65px; height: 65px;"
    >
      <svg
        class="MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-width="3.6"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Loading Component Should render the loader with text 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ cyXInH"
  >
    <div
      class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
      data-testid="loader"
      role="progressbar"
      style="width: 65px; height: 65px;"
    >
      <svg
        class="MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-width="3.6"
        />
      </svg>
    </div>
    <span
      class="sc-gsTCUz ISRsW"
    >
      Loading...
    </span>
  </div>
</DocumentFragment>
`;
